# Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: LockLessMultiReadPipe.h.37A0464F5C1544AE.idx  TaskScheduler.cpp.F92ED9C0992211C2.idx  TaskScheduler.h.5A37468341028299.idx  Tracy.hpp.55ACA1C0EE75D62F.idx  TracyAlign.hpp.BBDC25BB87547D29.idx  TracyAlloc.cpp.73D0E3E99460875D.idx  TracyAlloc.hpp.164D8BBAE8132444.idx  TracyApi.h.54D5A2BF20CF80D2.idx  TracyArmCpuTable.hpp.FA7679A5561712E5.idx  TracyC.h.50B73ED76B76FD51.idx  TracyCallstack.cpp.87445196D2E86A7D.idx  TracyCallstack.h.BE71F17DD741277F.idx  TracyCallstack.hpp.593169B71CD8C185.idx  TracyClient.cpp.278CE8BDDCCFBADF.idx  TracyColor.hpp.19BC43F37AA3F7A5.idx  TracyCpuid.hpp.30F5A7C9CBE2B95D.idx  TracyDebug.hpp.A723901540D1AABC.idx  TracyDxt1.cpp.ED6A98684AF000BD.idx  TracyDxt1.hpp.CBE7CDDB86411F26.idx  TracyElf.hpp.003245D5301BD307.idx  TracyFastVector.hpp.FEBDE18F0F33ECF3.idx  TracyForceInline.hpp.517AE3B384FAA7F2.idx  TracyFormat.hpp.0DCB0A31B8B28FD6.idx  TracyKCore.cpp.8F76F25D4C95109F.idx  TracyKCore.hpp.E7C9C3D431590FB5.idx  TracyLock.hpp.EACE4D93FD939459.idx  TracyMangle.hpp.A9B8DF9BA7E201F8.idx  TracyMutex.hpp.B23EA416BFE08BE8.idx  TracyOverride.cpp.A93FD3A50A0DD5FF.idx  TracyProfiler.cpp.13D1A01B4F2CB537.idx  TracyProfiler.hpp.8C99E061F88F82CF.idx  TracyProtocol.hpp.F9CF6F948EC1B201.idx  TracyQueue.hpp.2758FBAB82F559E6.idx  TracyRingBuffer.hpp.5364088D6CAAEF86.idx  TracyScoped.hpp.356D98D9C7A1D527.idx  TracySocket.cpp.C13C0D9B9620B2DD.idx  TracySocket.hpp.0D72B9122EA6A08E.idx  TracyStackFrames.cpp.B69498EACE25A414.idx  TracyStackFrames.hpp.FC6390052461C1EA.idx  TracyStringHelpers.hpp.01DFCDD6D863C246.idx  (+220 more)
.docs/: SHADER_AND_VULKAN_COMPONENTS.md
foundation/: CMakeLists.txt  camera.cpp  camera.hpp
shaders/: compose.frag  config.h  filtering.comp  filtering_cascade.comp  fxxa_pass.frag  gbuffer.frag  gbuffer.vert  shadow_depth.vert  ssao.frag  ssao_blur.comp
src/demo/: main.cpp
